# realistic

./: Cargo.toml
benches/: float_convert.rs  library_perf.rs  numerical_micro.rs  realistic_operations.rs
src/: computable.rs  lib.rs  rational.rs  real.rs  serde.rs  simple.rs
src/computable/: approximation.rs  format.rs
src/rational/: convert.rs
src/real/: test.rs
