[package]
name = "realistic"
description = "Towards an API for the Real Numbers"
license = "Apache-2.0"
repository = "https://github.com/tialaramex/realistic/"
version = "0.8.1"
edition = "2024"

[dependencies]
num = { version = "0.4.3", features = ["num-bigint"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "realistic_operations"
harness = false
