[package]
name = "realistic"
description = "Towards an API for the Real Numbers"
license = "Apache-2.0"
repository = "https://github.com/tialaramex/realistic/"
version = "0.8.1"
edition = "2024"

[dependencies]
num = { version = "0.4.3", features = ["num-bigint"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "borrowed_ops"
harness = false

[[bench]]
name = "library_perf"
harness = false

[[bench]]
name = "numerical_micro"
criterion = "0.5.1"

[[bench]]
name = "float_convert"
harness = false
